// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when is open 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  onExpanderChange={[Function]}
  open={true}
>
  <ul
    className="src-components-sidenav-menu__menu"
    role="group"
  >
    <li
      className="src-components-sidenav-menu__link"
      key="a"
      role="treeitem"
    >
      <MenuLink
        label="a"
        onClick={[Function]}
        path="/a"
      />
    </li>
  </ul>
</Expander>
`;

exports[`should render correctly when not open 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  onExpanderChange={[Function]}
  open={false}
>
  <ul
    className="src-components-sidenav-menu__menu"
    role="group"
  >
    <li
      className="src-components-sidenav-menu__link"
      key="a"
      role="treeitem"
    >
      <MenuLink
        label="a"
        onClick={[Function]}
        path="/a"
      />
    </li>
  </ul>
</Expander>
`;
